updated footer placeholder

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
   <p>Tip: You can also remove the .navbar-expand-md class to ALWAYS hide navbar links and display the toggler button.</p>
 </div> -->
 
+<!-- 
+     <footer class="text-muted">
+      <div class="container">
+        add social links here...        
+      </div>
+    </footer>
+ -->
+
 </body>
 </html>
 
