--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Cultural Community Center</title>
+    <!-- meta tag section -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" value="Priyojit Roy">
+    <meta name="description" value="The website promoting acultural program where musical troupe will be performing,
+         organized by Community Center">
+    <!-- stylesheets -->
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+    <!-- bootstrap dependent scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 <body>
+    <!-- page header section - displays site logo & menu section -->
     <header>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-md bg-light navbar-light page-font">
+            <!-- website branding logo -->
             <a class="navbar-brand" href="#">
                 <img class="brand-logo" src="images/PR.png" alt="Logo">
             </a>
+            <!-- website menu toggle icon for responsive layout -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- menu items -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav navbar-right">
                     <li class="nav-item">
@@ -35,64 +48,85 @@
             </div>  
         </nav>
     </header>
-    <!-- carousel section begins -->
+    <!-- end of header & navigation section -->
+    <!-- main page section - displays event banner and details -->
     <main>
-        <div id="carousel-container" class="carousel slide" data-ride="carousel">
+        <!-- carousel section - banner of the event -->
+        <section id="carousel-container" class="carousel slide" data-ride="carousel">
             <ul class="carousel-indicators">
                 <li data-target="#carousel-container" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-container" data-slide-to="1"></li>
-                <li data-target="#carousel-container" data-slide-to="2"></li>
             </ul>
             <div class="carousel-inner">
-                <!-- carousel item# 1 -->
                 <div class="carousel-item active">
-                    <img src="images/carousel-1.jpg" class=".img-fluid" alt="Jazz">
-                    <div class="carousel-caption">
-                        <h3>carousel item# 1</h3>
-                        <p>carousel item# 1!</p>
-                    </div>
-                </div>
-                <!-- carousel item# 2 -->
-                <div class="carousel-item">
-                    <img src="images/carousel-2.jpg" class=".img-fluid" alt="Weddings">
-                    <div class="carousel-caption">
-                        <h3>carousel item# 2</h3>
-                        <p>carousel item# 2!</p>
-                    </div>
-                </div>
-                <!-- carousel item# 3 -->
-                <div class="carousel-item">
-                    <img src="images/carousel-3.jpg" class=".img-fluid" alt="Blues">
-                    <div class="carousel-caption">
-                        <h3>carousel item# 3</h3>
-                        <p>carousel item# 3!</p>
+                    <img src="images/cover.jpg" class="d-block w-100" alt="Musical evening">
+                    <div class="carousel-caption d-block">
+                        <h2 class="h2-responsive">Cultural Community Presents - A musical evening</h2>
+                        <p>There will musical events that will be taking place, performed by different muscial troupes.</p>
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carousel-container" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#carousel-container" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
-        </div>
+        </section>
+        <!-- end of carousel/banner section -->
+        <hr>
+        <!-- tabular section - displays event details -->
+        <section class="container-fluid text-center">
+            <h2 class="display-4 page-font">Event Details</h2>
+            <div class="row">
+                <!-- event# 1 -->
+                <div class="col-sm-4">
+                    <div class="card text-left page-font">
+                        <img src="images/carousel-1.jpg" alt="Jazzy">
+                        <div class="card-body">
+                            <h5 class="card-title">Band: Jazzy</h5>
+                            <p class="card-text">
+                                Enjoy soulful musical rendition of jazz music.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- event# 2 -->
+                <div class="col-sm-4">
+                    <div class="card text-left page-font">
+                        <img src="images/carousel-2.jpg" alt="Three Words">
+                        <div class="card-body">
+                            <h5 class="card-title">Band: Three Words</h5>
+                            <p class="card-text">
+                                Youthful performance of foot tapping numbers.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- event# 3 -->
+                <div class="col-sm-4">
+                    <div class="card text-left page-font">
+                        <img src="images/carousel-3.jpg" alt="Men in Blue">
+                        <div class="card-body">
+                            <h5 class="card-title">Band: Men in Blue</h5>
+                            <p class="card-text">
+                                Classical show of blue for soothing soul.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-<!-- <div class="container">
-  <h3>Collapsible Navbar</h3>
-  <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try to re-size this window).</p>
-  <p>Only when the button is clicked, the navigation bar will be displayed.</p>
-  <p>Tip: You can also remove the .navbar-expand-md class to ALWAYS hide navbar links and display the toggler button.</p>
-</div> -->
-
-<!-- 
-     <footer class="text-muted">
-      <div class="container">
-        add social links here...        
-      </div>
+    <!-- end of main section -->
+    <hr>
+    <!-- footer section -->
+    <footer class="footer-section page-font">
+        <!-- social media links -->
+        <div class="container-fluid text-center">
+            Follow us:
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-google-plus"></i>
+            <i class="fa fa-linkedin"></i>
+        </div>
+        <!-- copyright section -->
+        <div class="text-center text-muted">
+            <p>&copy; All rights reserved.</p>
+        </div>
     </footer>
- -->
-
 </body>
 </html>
-
-
